# zapper

./: Cargo.toml  README.md
man/: zap.1
packaging/systemd/: zapper.service
src/: main.rs
