[package]
name = "s21g-zapper"
version = "2.1.0"
edition = "2024"
description = "Local Markdown search engine with HTTPS remote search federation"
license = "MIT"
repository = "https://github.com/genki/zapper"

[[bin]]
name = "zap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
glob = "0.3"
globset = "0.4"
notify = "6"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
